--- a/package.json
+++ b/package.json
@@ -1034,6 +1034,9 @@
     "concurrently": "^4.1.0",
     "mocha": "^5.2.0"
   },
+  "engines": {
+    "node": "11.6.0"
+  },
   "scripts": {
     "test": "mocha || true",
     "start": "node server.js",
