--- a/package.json
+++ b/package.json
@@ -1040,6 +1040,7 @@
   "scripts": {
     "test": "mocha || true",
     "start": "node index.js",
+    "build": "react-scripts build",
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
