--- a/package.json
+++ b/package.json
@@ -1038,13 +1038,13 @@
     "node": "11.6.0"
   },
   "scripts": {
-    "test": "mocha || true",
-    "start": "node index.js",
+    "start": "NODE_ENV=production node index.js",
     "build": "react-scripts build",
+    "test": "react-scripts test",
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC"
