--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "dotenv": "^6.2.0"
   },
   "engines": {
     "node": "11.6.0"
   },
   "scripts": {
-    "start": "NODE_ENV=production node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
     "client": "cd client && npm start",
     "server": "nodemon index.js",
-    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
