Update scripts and Procfile

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "node": "11.6.0"
   },
   "scripts": {
-    "client": "cd client && npm start",
-    "server": "nodemon index.js",
+    "client": "node start-index.js",
+    "server": "node index.js",
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
