--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "engines": {
     "node": "11.6.0"
   },
