--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
-    "mocha": "^5.2.0",
-    "dotenv": "^6.2.0"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "mocha": "^5.2.0"
   }
 }
