Update dev scripts

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "cd client && npm start",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
