Fix layout positioning

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
+    "build": "cd client && npm run build",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
