--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
+  "proxy": "http://localhost:8000/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
